<resources>
    <string name="community_sdk_app_name">Community SDK Demo</string>
    <string name="login_session_expired">The login information has expired. Please login again</string>
    <string name="action_tips_exit_hint">Press again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ty_confirm">Confirm</string>
    <string name="ty_cancel">Cancel</string>
    <string name="ty_simple_confirm_title">Tip</string>
    <string name="close">Close</string>


    <string name="login_out">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="phone_num">Cell-phone Number</string>
    <string name="password">Password</string>
    <string name="input_password_please">Please input a password</string>
    <string name="input_phone_num_please">Please enter your mobile phone number</string>
    <string name="input_password_tip">6-20 characters, including letters and numbers</string>
    <string name="concern">Determine</string>
    <string name="input_verification_code">Enter verification code</string>
    <string name="resend">Resend</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="set_password">Set password</string>
    <string name="reset_password">Reset password</string>
    <string name="login_forget">Forget password</string>
    <string name="get_verification_code_success">Successfully obtained verification code</string>
    <string name="login_success">Login succeeded</string>
    <string name="verification_has_send_tip">The verification code has been sent to your mobile phone</string>
    <string name="change_house">Change House</string>
    <string name="face_service">Face service</string>
    <string name="upload_face">Upload  face</string>
    <string name="stop_face">Stop  face</string>
    <string name="input_file_path">Input file path</string>
    <string name="upload_success">Uploaded successfully</string>
    <string name="please_choose_pic_first">Please select a picture first</string>
    <string name="has_not_uplaod">The user has not uploaded a face photo</string>
    <string name="stop_face_pic_tip">Are you sure you want to disable face photos</string>
    <string name="stop_success">Deactivated successfully</string>
    <string name="visitor">Visitor access</string>
    <string name="get_visitor_record">Get access records</string>
    <string name="no_list">No list yet</string>
    <string name="input_visitor_phone">Please enter phone number</string>
    <string name="submit_visitor_info">Generate visitor pass</string>
    <string name="visitor_success">success</string>
    <string name="delete_visitor">Delete</string>
    <string name="not_visitor">Not visited</string>
    <string name="visited">Visited</string>
    <string name="miss_visitor">Missed overdue</string>
    <string name="smart_call_elevator">Smart call elevator</string>
    <string name="add_image">Click to select photo</string>
    <string name="visitor_phone">Visitor phone :</string>
    <string name="visitor_list">Visitor List</string>
    <string name="visitor_info">Visitor Info</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="user_face">User Face</string>
    <string name="member_face">Member Face</string>
    <string name="no_permission">Permission denied</string>
    <string name="smart_door">Smart Door</string>
    <string name="visual_speak">Visual Speak</string>
    <string name="visual_speak_video">Visual Speak Video</string>
    <string name="not_support_device">Not Support Device</string>

    <!-- IPC-->
    <string name="operation_suc">Operation success</string>
    <string name="hd">HD</string>
    <string name="sd">SD</string>
    <string name="other">Other</string>
    <string name="speak">Speak</string>
    <string name="snapshot">Snapshot</string>
    <string name="record">Record</string>
    <string name="replay">Replay</string>
    <string name="cloud_video">Cloud video</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="device_info">Device info</string>
    <string name="get_clarity">Get clarity</string>
    <string name="playback_title">Playback</string>
    <string name="doorbell_title">Doorbell Call</string>
    <string name="playback_input_hint">Input query date: </string>
    <string name="query">Query</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="message_title">Detection Alarm</string>
    <string name="info_title">Device Info</string>
    <string name="low_power">is low power: </string>
    <string name="video_num">video num: </string>
    <string name="default_definition">default definition: </string>
    <string name="is_support_speaker">is support speaker: </string>
    <string name="is_support_picK_up">is support pick up: </string>
    <string name="is_support_talk">is support talk back mode up: </string>
    <string name="default_talk_mode">default talk back mode: </string>
    <string name="support_speed">support playback speed: </string>
    <string name="raw_data">raw data: </string>
    <string name="settings_title">Settings</string>
    <string name="cloud_video_title">Cloud Video</string>
    <string name="download">Download</string>
    <string name="duration">Duration: </string>
    <string name="record_start">Start record</string>
    <string name="record_stop">Stop record</string>
    <string name="cloud_status">Cloud Storage Status</string>
    <string name="buy">Buy Cloud Storage</string>
    <string name="query_cloud">Query Cloud Storage Data</string>
    <string name="query_cloud_of_day">Query Appoint Time Data</string>
    <string name="download_suc">Download success</string>
    <string name="operation_failed">Operation failed</string>
    <string name="no_data">No data for query date</string>
    <string name="connect_first">Please connect device first</string>
    <string name="input_err">Input error</string>
    <string name="connect_failed">Connect failed</string>
    <string name="not_support">Unsupported</string>
    <string name="format_status">format status: </string>
    <string name="not_input_query_data">Input query date</string>
    <string name="get_current_clarity">Current video clarity is: </string>
    <string name="err_code">Status value: </string>
    <string name="current_state">Current state: </string>
    <string name="ipc_doorbell_refuse">Refuse</string>
    <string name="ipc_doorbell_hangup">Hang up</string>
    <string name="ipc_doorbell_accept">Accept</string>
    <string name="menu_remove_device">Remove Device</string>
    <string name="remove_device_dialog">Are you sure remove this device？</string>

    <string name="my_house_list">My House List</string>
    <string name="get_house_info">get house info</string>
    <string name="get_house_detail">get house detail</string>
    <string name="visit_reason_empty">The reason for the visit is empty</string>
</resources>