<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_top_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/blue_30">

        <TextView
            android:id="@+id/add_image_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_image"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_face"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_face"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_go_to_member_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/member_face"
        android:textAllCaps="false" />
</LinearLayout>