<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_top_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_40"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_login_input"
            android:paddingTop="@dimen/dp_14"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_14"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip">

            <EditText
                android:id="@+id/et_edit_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@null"
                android:hint="@string/input_password_please"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_password_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/input_password_tip"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/csl_password" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_login_btn_selector"
            android:enabled="false"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/concern"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_tip" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>